@@ -2,4 +2,4 @@
 
 rm -rf aclocal.m4 config.h.in configure Makefile.in data/Makefile.in \
                 doc/Makefile.in macros/Makefile.in pixmaps/Makefile.in \
-                src/Makefile.in
+                src/Makefile.in doc/help/Makefile.in
