@@ -1,0 +1,21 @@
+<sect1 id="about">
+	<title>Introduction</title>
+	<para>GNUSim8085 was originally written by Sridhar Ratnakumar in year 2003 when he realized that no proper simulators existed for Linux. Since then it has been improved with features/fixes and ported to Windows thanks to help of various minds that are inclined to share knowledge.
+	</para>
+	<sect2 id="features">
+		<title>Features</title>
+		<para>GNUSim8085 makes it easy to learn the assembly language programming by providing an easy to use user interface. The application currently has following features.
+			<itemizedlist>
+				<listitem><para>Program editor with interactive input wizard for the standard instructions</para></listitem>
+				<listitem><para>Syntax highlighting in editor to distinguish between instructions, operands, comments etc.</para></listitem>
+				<listitem><para>Support for standard instructions of the 8085</para></listitem>
+				<listitem><para>Support for popular assembler directives</para></listitem>
+				<listitem><para>Complete view of registers and flags</para></listitem>
+				<listitem><para>Programming debugging using breakpoints or with step by step execution</para></listitem>
+				<listitem><para>Easy inspection of stack and source code variables defined</para></listitem>
+				<listitem><para>Easy inspection and manipulation of memory and I/O ports</para></listitem>
+				<listitem><para>Printing of program from editor as well as assembled hex code (known not to work well in Windows)</para></listitem>
+			</itemizedlist>
+		</para>
+	</sect2>
+</sect1>
